Fix horizontal scroll by removing it

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -52,4 +52,5 @@
   display: flex;
   flex-direction: row;
   width: fit-content;
+  height: 100vh;
 }
